# BMD

./: CMakeLists.txt  README.md  git_push.bat
app/: CMakeLists.txt  main.c  main.cpp
app_cpp/: CMakeLists.txt  main.cpp
cmake/: buildtype.cmake  find_stackwalker.cmake
docs/: mainpage.md
include/bmd/: arrays.h  common.h  core.h  errors.h  files.h  logger.h  profiler.h  strutil.h  timer.h  types.h
src/: CMakeLists.txt
src/bmd/: arrays.c  arrays.cpp  errors.c  errors.cpp  files.c  files.cpp  logger.c  logger.cpp  profiler.c  strutil.c  strutil.cpp  timer.c  timer.cpp
